--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+name: release
 
 # Controls when the action will run. 
 on:
@@ -13,24 +11,33 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  publish:
     runs-on: ubuntu-latest
+    environment: pastebin.com
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # - name: upload to pastebin.com
+      #   env:
+      #     PASTEBIN_DEV_KEY: ${{ secrets.PASTEBIN_DEV_KEY }}
+      #     PASTEBIN_API_USER_KEY: ${{ secrets.PASTEBIN_API_USER_KEY }}
+      #   run: |
+      #     chmod +x ./scripts/upload_pastebin.sh
+      #     ./scripts/upload_pastebin.sh dist/dist.lua $PASTEBIN_DEV_KEY $PASTEBIN_API_USER_KEY
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: IECOS.lua
+      #     path: dist/dist.lua
+
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            dist/dist.lua
