--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,15 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '15.x'
+
+      - run: npm ci
+      - name: Build
+        run: npm run build
+
       # - name: upload to pastebin.com
       #   env:
       #     PASTEBIN_DEV_KEY: ${{ secrets.PASTEBIN_DEV_KEY }}
@@ -32,13 +41,6 @@ jobs:
       #   with:
       #     name: IECOS.lua
       #     path: dist/dist.lua
-
-      - name: Use Node.js 15.12.0
-        uses: actions/setup-node@v1
-
-      - run: npm ci
-      - name: Build
-        run: npm run build
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
