--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.41",
+    "cc-tweaked-types": "^0.1.1",
     "typescript-to-lua": "^0.39.2"
-  },
-  "dependencies": {
-    "cc-tweaked-types": "^0.1.1"
   }
 }
